src/objects/CIS_Offices__c.object
<CustomObject>
    <description>This is the CIS object used for the Member of Congress&apos; Offices.</description>
    <fields>
        <fullName>Activity_Address_Code__c</fullName>
        <description>Activity Address Code</description>
        <inlineHelpText>Activity Address Code</inlineHelpText>
        <label>Activity Address Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSC Account</description>
        <inlineHelpText>CSC Account</inlineHelpText>
        <label>CSC Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>The City that the office is located in.</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate_PmoAo_Check__c</fullName>
        <description>Used by workflow.  PmoAo Number is unique by Region, this hidden field enforces that.</description>
        <label>Duplicate PmoAo Check</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Inventory_Date__c</fullName>
        <description>Last Inventory Date</description>
        <inlineHelpText>Last Inventory Date</inlineHelpText>
        <label>Last Inventory Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Main_Phone_Number__c</fullName>
        <label>Main Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member ID</description>
        <inlineHelpText>Member ID</inlineHelpText>
        <label>Member ID</label>
        <referenceTo>CIS_MemberOfCongress__c</referenceTo>
        <relationshipName>PmoAo_Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_of_Congress__c</fullName>
        <description>Name of the Member of Congress from the Congressional Information object.</description>
        <formula>Member_ID__r.Member_of_Congress_Name__r.Name
+ &quot;, &quot; + 
Member_ID__r.Member_of_Congress_Name__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member of Congress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Inventory_Date__c</fullName>
        <description>Next Inventory Date</description>
        <formula>IF($RecordType.Name  = &quot;Senate&quot;,  

DATE(YEAR(Last_Inventory_Date__c)+ 2, MONTH(Last_Inventory_Date__c), DAY(Last_Inventory_Date__c)), 

DATE(YEAR(Last_Inventory_Date__c) + 6, MONTH(Last_Inventory_Date__c), DAY(Last_Inventory_Date__c))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Next Inventory Date</inlineHelpText>
        <label>Next Inventory Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMO_AO_Number__c</fullName>
        <label>PMO/AO Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PmoAo_City_State__c</fullName>
        <formula>PMO_AO_Number__c + &quot; - &quot; +  City__c  + &quot;, &quot; +   State__c</formula>
        <label>PmoAo City State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT( Member_ID__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Region__c</fullName>
        <description>Used for reporting - updated on creation with region formula field.</description>
        <label>Reporting Region</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Space_Assigned__c</fullName>
        <description>Space Assigned</description>
        <inlineHelpText>Space Assigned</inlineHelpText>
        <label>Space Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>Post Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street Address of the PmoAo Office.</description>
        <label>Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CIS Office</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PMO_AO_Number__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>Member_of_Congress__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>House</fullName>
        <columns>NAME</columns>
        <columns>Member_of_Congress__c</columns>
        <columns>Next_Inventory_Date__c</columns>
        <columns>Region__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CIS_Offices__c.House</value>
        </filters>
        <label>House</label>
    </listViews>
    <listViews>
        <fullName>Inventory_due_this_year</fullName>
        <columns>NAME</columns>
        <columns>Next_Inventory_Date__c</columns>
        <columns>Member_of_Congress__c</columns>
        <columns>PMO_AO_Number__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Inventory_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2012</value>
        </filters>
        <filters>
            <field>Next_Inventory_Date__c</field>
            <operation>lessThan</operation>
            <value>12/31/2012</value>
        </filters>
        <label>Inventory due this year</label>
    </listViews>
    <listViews>
        <fullName>Other_space</fullName>
        <columns>NAME</columns>
        <columns>Member_ID__c</columns>
        <columns>Member_of_Congress__c</columns>
        <columns>PmoAo_City_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Space_Assigned__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <label>Other space</label>
    </listViews>
    <listViews>
        <fullName>Senate</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Main_Phone_Number__c</columns>
        <columns>Member_of_Congress__c</columns>
        <columns>Space_Assigned__c</columns>
        <columns>CSC_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CIS_Offices__c.Senate</value>
        </filters>
        <label>Senate</label>
    </listViews>
    <listViews>
        <fullName>Senators_in_GSA_Space</fullName>
        <columns>NAME</columns>
        <columns>CSC_Account__c</columns>
        <columns>Last_Inventory_Date__c</columns>
        <columns>Main_Phone_Number__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Next_Inventory_Date__c</columns>
        <columns>PMO_AO_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CIS_Offices__c.Senate</value>
        </filters>
        <filters>
            <field>Space_Assigned__c</field>
            <operation>equals</operation>
            <value>GSA</value>
        </filters>
        <label>Senators in GSA Space</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CIS Office ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIS Offices</pluralLabel>
    <recordTypes>
        <fullName>House</fullName>
        <active>true</active>
        <description>House</description>
        <label>House</label>
    </recordTypes>
    <recordTypes>
        <fullName>Senate</fullName>
        <active>true</active>
        <description>Senate</description>
        <label>Senate</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Avoid_Duplicate_Standard_PMOAO_Numbers</fullName>
        <active>true</active>
        <description>&quot;77ZA&quot; is reserved PMOAO Number for storage account. Do not let users enter &quot;77ZA&quot; in any other CIS office irrespective of region &amp; MOC.</description>
        <errorConditionFormula>AND( 
 UPPER(PMO_AO_Number__c) = &quot;77ZA&quot;,
 OR(
    AND(
        NOT(Duplicate_PmoAo_Check__c = NULL),
        NOT(Duplicate_PmoAo_Check__c = &quot;77ZA&quot;)),
    NOT(ISPICKVAL(Member_ID__r.Region__c,&quot;&quot;))
   )
)</errorConditionFormula>
        <errorDisplayField>PMO_AO_Number__c</errorDisplayField>
        <errorMessage>PMO/AO Number &quot;77ZA&quot; is preserved for storage account. Please enter any other PMO/AO Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Number_must_be_10</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( Fax_Number__c &lt;&gt; &quot;&quot;, 

LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(  Fax_Number__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt; 10)</errorConditionFormula>
        <errorMessage>Fax Number must be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Inventory_Date_not_future</fullName>
        <active>true</active>
        <description>Last Inventory Date cannot be future</description>
        <errorConditionFormula>Last_Inventory_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Last Inventory Date cannot be future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Main_Phone_Number_must_be_10</fullName>
        <active>true</active>
        <errorConditionFormula>AND (Main_Phone_Number__c &lt;&gt; &quot;&quot;, 

LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( Main_Phone_Number__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt; 10)</errorConditionFormula>
        <errorMessage>Main Phone Number must be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMOAO_Number_should_be_length_of_4</fullName>
        <active>true</active>
        <description>PMOAO Number should be a length of 4 characters</description>
        <errorConditionFormula>AND( LEN(PMO_AO_Number__c ) &lt; 4,  $RecordType.Name = &quot;Senate&quot;)</errorConditionFormula>
        <errorDisplayField>PMO_AO_Number__c</errorDisplayField>
        <errorMessage>PMOAO Number should be a length of 4 characters</errorMessage>
    </validationRules>
</CustomObject>